# Titan

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lisi/titan/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: k_media_sender.cpp  k_media_sender.h  k_rtp_sender.cpp  k_rtp_sender.h  k_server_conn.cpp  k_server_conn.h  k_server_conn_handler.cpp  k_server_conn_handler.h  native-lib.cpp
app/src/main/cpp/jsoncpp/: jsoncpp.cpp
app/src/main/cpp/k_util/: k_handler.cpp  k_string.cpp  k_string.h  k_util.cpp  k_util.h
app/src/main/cpp/libyuv/source/: rotate_neon64.cc  row_any.cc
app/src/main/java/com/lisi/titan/: CaptureFormat.java  MainActivity.java  TitanAudioEffects.java  TitanAudioEncoder.java  TitanAudioRecord.java  TitanCameraSession.java  TitanNativeLib.java  TitanVideoEncoder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lisi/titan/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
